--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<afas
+<!Doctype html>
+<html>
+  <head>
+    <title>Mocohocks Project</title>
+  </head>
+  <body>
+    <h1>Mocohacks Project</h1>
+  </body>
+</html>
