--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#2b2e4a;">
+    <div class="container">
+      <a class="navbar-brand" style="font-size:25px;color: #ee7777" href="#">Project</a>
+      <button style="border-style:none;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span style="border-color:pink;" class="fish navbar-toggler-icon">
+        </span>
+      </button>
+      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#">Machine</a>
+          <a class="nav-link" href="#">What</a>
+          <a class="nav-link" href="#">Why</a>
+          <a class="nav-link" href="#">How</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div style="height:60px"></div>
   <h1>Mocohacks Project</h1>
   <div>Teachable Machine Pose Model</div>
   <button type="button" onclick="init()">Start</button>
@@ -90,7 +108,7 @@
       }
     }
   </script>
-  <script type="text/javascript" src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
