--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="#">Machine</a>
+          <a class="nav-link" href="#label-container">Machine</a>
           <a class="nav-link" href="#">What</a>
           <a class="nav-link" href="#">Why</a>
           <a class="nav-link" href="#">How</a>
