--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="#label-container">Machine</a>
+          <a class="nav-link" href="#section1">Machine</a>
           <a class="nav-link" href="#">What</a>
           <a class="nav-link" href="#">Why</a>
           <a class="nav-link" href="#">How</a>
@@ -37,7 +37,8 @@
       <div class="col-md-6">
         <p>hello</p>
       </div>
-      <div class="col-md-6" style="background-color:red">
+  #section1 {
+      <div class="col-md-6" style="background-color:red"> }
         <div>Teachable Machine Pose Model</div>
         <!--<input id="startBtn" type="button" value="Start(failure)" />-->
         <button onclick="init();loopstarter()">Start</button>
