--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="#section1">Machine</a>
-          <a class="nav-link" href="#">What</a>
+          <a class="nav-link" href="#section2">What</a>
           <a class="nav-link" href="#">Why</a>
           <a class="nav-link" href="#">How</a>
         </div>
@@ -54,6 +54,7 @@
 
   </div>
 
+ #section2 {
   <div class="container">
     <h1>Reaching New Heights</h1>
     <p>The term posture is in reference to the position of one’s body in a standing or sitting position. The spine
@@ -72,7 +73,7 @@
       professional meetings online.
     </p>
   </div>
-
+}
 
 
 
