--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="navbar-nav">
           <a class="nav-link" href="#machine">Machine</a>
           <a class="nav-link" href="#">What</a>
-          <a class="nav-link" href="#">Why</a>
-          <a class="nav-link" href="#">Resources</a>
+          <a class="nav-link" href="#why">Why</a>
+          <a class="nav-link" href="#resources">Resources</a>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
 
   </div>
 
-  <div class="container">
+  <div id="why" class="container">
     <h1>Reaching New Heights</h1>
     <p>The term posture is in reference to the position of one’s body in a standing or sitting position. The spine
       consists of three natural curvatures which when aligned evenly distributes the weight between your feet. Good
