--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <button class="tmbtn" onclick="init();loopstarter()">Start</button>
         <button class="tmbtn" onclick="loopstopper()">Stop</button>
         <!--<button id="stopBtn" type="button" onclick="">Stop</button>-->
-        <div style="background-color:blue;height:200px;">
+        <div class="text-center" style="background-color:blue;height:200px;">
           <div class="row" style="width:100%;">
-            <div class="col">
+            <div class="col-12" style="background-color:blanchedalmond">
               <canvas style="height:200px; width:200px;" id="canvas"></canvas>
             </div>
 
-            <div class="col" style="height:200px; background-color:pink;width:auto;position:relative;">
-              <div style="background-color:aquamarine;height:5px;position:relative;top:67px;right:200px"></div>
-              <div style="background-color:violet;height:5px;position:relative;top:133px;right:200px;"></div>
-              <div style="background-color:aquamarine;height:5px;position:relative;top:160px;right:200px;"></div>
+            <div class="col-0" style="height:200px;width:0px;position:relative;padding-left:0px;padding-right:0px;">
+              <div style="background-color:aquamarine;height:5px;position:relative;top:67px;right:200px;width:200px;"></div>
+              <div style="background-color:violet;height:5px;position:relative;top:133px;right:200px;width:200px;"></div>
+              <div style="background-color:aquamarine;height:5px;position:relative;top:160px;right:200px;width:200px"></div>
             </div>
           </div>
         </div>
