--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3>Instructions</h3>
           <ol>
             <li>Align head to be in between the aquamarine lines.</li>
-            <li>Align nose to rest on pink line.</li>
+            <li>Align nose and ears to rest on pink line.</li>
           </ol>
         </div>
       </div>
@@ -58,6 +58,7 @@
         <button class="tmbtn" onclick="init();loopstarter()">Start</button>
         <button class="tmbtn" onclick="loopstopper()">Stop</button>
         <!--<button id="stopBtn" type="button" onclick="">Stop</button>-->
+        <button class="tmbtn" onclick="">Align</button>
         <div class="text-center" style="background-color:blue;height:200px;position:relative;">
           <canvas style="height:200px; width:200px;margin-bottom:0px" id="canvas"></canvas>
 
