--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
     async function init() {
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
-      var audio = new Audio('siren.mp3'); 
-  function myaudiofunction(prediction){
-  if(prediction[0]probability.toFixed(2) > 0.9){
-      audio.play();
-  }
-}
+      /*var audio = new Audio('siren.mp3');
+      function myaudiofunction(prediction){
+        if(prediction[0].probability.toFixed(2) > 0.9){
+          audio.play();}
+        }
+      }*/
 
 
       // load the model and metadata
