--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </div>
   </nav>
   <div style="height:100px"></div>
-  <button onclick="play()">Play Audio</button>
 
 
   <div id="machine" class="container">
@@ -112,20 +111,6 @@
 
 
 
-
-
-  <script>
-    /*var audio = new Audio('siren.mp3');
-        function myaudiofunction(prediction){
-          if(prediction[0].probability.toFixed(2) > 0.9){
-            audio.play();}
-          }
-        }*/
-    function play() {
-      var audio = new Audio('siren.ogg');
-      audio.play();
-    }
-  </script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
   <script type="text/javascript">
@@ -221,6 +206,7 @@
         labelContainer.childNodes[i].innerHTML = classPrediction;
         if (prediction[1].probability.toFixed(2) > 0.9) {
           var audio = new Audio('siren.ogg');
+          audio.volume = 0.05;
           audio.play();
           console.log(prediction[1].probability.toFixed(2));
         }
